[package]
name = "procguard"
version = "1.5.1"
edition = "2024"
rust-version = "1.91"
authors = ["denispol"]
description = "The formally verified process supervisor for macOS. Enforces time limits, memory quotas, and CPU throttling."
license = "MIT"
repository = "https://github.com/denispol/procguard"
readme = "README.md"
documentation = "https://docs.rs/procguard"
keywords = ["cli", "timeout", "process", "macos", "supervisor"]
categories = ["command-line-utilities", "os::macos-apis"]

# publish allowlist - keep crates.io package small and deterministic
include = [
	"Cargo.toml",
	"README.md",
	"LICENSE",
	"build.rs",
	"src/**",
	"tests/**",
	"completions/**",
	"docs/*.md",
]

[lib]
name = "procguard"
path = "src/lib.rs"

[dependencies]
# Direct libc for signal handling, process groups, kqueue
# default-features = false for no_std compatibility
libc = { version = "0.2.178", default-features = false }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
proptest = "1.9.0"

[profile.release]
opt-level = "z"         # size-optimized (perf impact minimal for this CLI)
lto = "fat"             # cross-crate optimization
codegen-units = 1       # single unit = better optimization
panic = "abort"         # no unwind tables
strip = "symbols"       # strip debug symbols
overflow-checks = false # no runtime overflow checks

# Faster dev builds - skip optimizations entirely
[profile.dev]
opt-level = 0
debug = true

# Tests with minimal optimization for reasonable speed
[profile.test]
opt-level = 1

# Benchmarking with full optimizations
[profile.bench]
lto = true
opt-level = 3

# Fuzzing profile - optimizations with debug assertions
[profile.fuzz]
inherits = "release"
opt-level = 3
debug-assertions = true
overflow-checks = true

# Both binaries share the same source - behavior detected via argv[0] at runtime:
# - "procguard": defaults to --confine wall (sleep-aware)
# - "timeout": defaults to --confine active (GNU-compatible)
# Note: Cargo warns about shared main.rs; this is intentional for cargo install support.
[[bin]]
name = "procguard"
path = "src/main.rs"

[[bin]]
name = "timeout"
path = "src/main.rs"

[package.metadata.docs.rs]
# docs.rs builds on linux by default; force building docs for macOS targets.
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

[features]
default = []

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
# New in 1.91: catches raw pointers derived from locals that outlive their source.
# Critical for FFI code where stack pointers could escape to C functions.
dangling_pointers_from_locals = "deny"
# Uplifted in 1.88: prevents null pointer UB in FFI calls expecting non-null args.
invalid_null_arguments = "deny"
# Allow kani cfg for formal verification proofs
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
# Require SAFETY comments on unsafe blocks - enforces documentation of invariants.
undocumented_unsafe_blocks = "deny"
# Prefer single unsafe ops per block for auditability. Allow-listed in existing
# code where multiple operations share the same invariants (e.g., fcntl sequences,
# sigaction setup). New code should split blocks where possible.
multiple_unsafe_ops_per_block = "warn"
